Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5071

QtGrahicsItem addToGroup don't work as expected

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.1
    • 3.x
    • Widgets: GraphicsView
    • None
    • 6a1cff7c47e1f47161f765ba2f7094b55aaa13c5

    Description

      When ou add items in scene, rotate/scale then using setRotation/setScale and then if you group them the items have their transformation applied twice.

      The code for grouping items is not clean. I suggest to either :

      • make QtTransform aware of rotation and scale transformations not used via a matrix
      • undo scale and rotation after applying the transformation matrix when placing items in a group (like it's done with position information)
      • only use QtTransform matrix for transformations and get rid of double informations like position/rotation/scale
      • deprecate grouping

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            ecyrbe ecyrbe
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes