Fixes Graphicsitem transformation problems when grouping/ungrouping.

New transformation properties added in 4.6, such as rotation or
transformOriginPoint were not taken into account in addTogroup and
removeFromGroup.

Autotest and manual test included.

Task-number: QTBUG-5071
Reviewed-by: bnilsen